clusters/casper/production/root/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: root
  namespace: production
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - 6f.io
    secretName: root-tls
  rules:
  - host: 6f.io
    http:
      paths:
      - backend:
          serviceName: root
          servicePort: 80
